Fix layout problem and add logo to mobile version

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1836,6 +1836,10 @@ select {
   margin-left: 1rem;
   margin-right: 1rem;
 }
+.mx-5 {
+  margin-left: 1.25rem;
+  margin-right: 1.25rem;
+}
 .ml-3 {
   margin-left: 0.75rem;
 }
